--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,7 @@
     "RefreshKey": 1029
   },
   "ConnectionStrings": {
-    "defaultString": "Server=Damon-Desktop\\SQLEXPRESS08;Database=WMS;User Id=user;Password=user;TrustServerCertificate=True;",
+    "defaultString": "User ID=postgres;Password=will;Server=localhost;Port=5432;Database=WMS;IntegratedSecurity=true;Pooling=true",
     "hangfireString": "",
     "redisString": ""
   },
@@ -30,3 +30,5 @@
   },
   "AllowedHosts": "*"
 }
+
+// "defaultString": "Server=Damon-Desktop\\SQLEXPRESS08;Database=WMS;User Id=user;Password=user;TrustServerCertificate=True;",
