--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,7 @@
     "RefreshKey": 1029
   },
   "ConnectionStrings": {
-    "defaultString": "User ID=postgres;Password=will;Server=localhost;Port=5432;Database=WMS;IntegratedSecurity=true;Pooling=true",
+    "defaultString": "User ID=postgres;Password=will;Server=localhost;Port=5432;Database=WMS;Pooling=true",
     "hangfireString": "",
     "redisString": ""
   },
